# AzabBot

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AVATAR_SETUP.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  OPEN_SOURCE_CHECKLIST.md  README.md  RELEASE_NOTES.md  SECURITY.md  SIMPLE_SETUP.md  TERMS.md  VERSION  VERSIONING.md  deploy.sh  deploy_ai_update.sh  ecosystem.config.js  env.example  fix_formatting.py  fix_missing_imports.py  main.py  pyproject.toml  pytest.ini  quick_vps_deploy.sh  requirements.txt  setup.sh  test-webhook.md  test_ai_knowledge.py  test_ping_requirement.py  test_webhook.md  update_version.py
.github/workflows/: ci-forum.yml  ci.yml  commits.yml  deploy.yml  discord-notify.yml  forum-discord.yml  push-notify.yml  release.yml  status.yml  test-discord.yml  test-forum-webhook.yml  update-deps.yml
data/: indexes.sql  prison_features.sql  schema.sql
docs/: ARCHITECTURE-NOTES.md  AZAB_CHARACTER.md  DATABASE_REPORTS.md  README.md
docs/project/: CHANGELOG.md  SECURITY.md  STREAMLINED_BOT.md
docs/setup/: discord-webhook.md
examples/: README.md
examples/antispam/: detectors.py  handlers.py  models.py  service.py
examples/api/: __init__.py  app.py  config.py
examples/case_log/: __init__.py  actions.py  embeds.py  service.py  tags.py  views.py
examples/database/: base.py  cases.py  manager.py  mutes.py  schema.py  warnings.py
examples/mute/: __init__.py  cog.py  mute_ops.py  unmute_ops.py  views.py
examples/prison/: handler.py  release.py  views.py  welcome.py
examples/server_logs/: categories.py  service.py
examples/tickets/: __init__.py  constants.py  embeds.py  html_generator.py  operations.py  service.py  views.py
scripts/: README_LOG_SYNC.md  com.azabbot.logsync.plist  install_log_sync.sh  log_sync_daemon.py  migrate_tickets.py  send_panel.py  setup_prison_automod.py  sync_logs_daemon.sh  uninstall_log_sync.sh
src/: __init__.py  bot.py  bot_backup.py  main.py
src/api/: __init__.py  app.py  bot.py  config.py  dependencies.py  errors.py
src/bot/: bot.py  commands.py
src/commands/: __init__.py  activate.py  alt.py  ban.py  credits.py  deactivate.py  forbid.py  history.py  ignore.py  link.py  lockdown.py  mute.py  purge.py  purge_prison.py  snipe.py  (+3 more)
tests/: __init__.py  conftest.py  test_ai_service.py  test_alt_detection.py  test_bot.py  test_case_log.py  test_commands.py  test_config.py  test_database.py  test_database_service.py  test_di_container.py  test_duration.py  test_health_monitor.py  test_instance_manager.py  test_interactions.py  test_logger.py  test_security.py  test_services.py  test_simple.py  test_tickets.py
(+442 files in other folders)
